Fix bug where navigation bar header was to big/long and the navigationbar was broken on small resolutions

--- a/src/components/navigation-bar/navigation-bar.css
+++ b/src/components/navigation-bar/navigation-bar.css
@@ -17,3 +17,15 @@
     display: none;
   }
 }
+
+@media (max-width: 367px) {
+  .navbar-header {
+    font-size: 12pt;
+  }
+}
+
+@media (max-width: 337px) {
+  .navbar-header {
+    font-size: 10pt;
+  }
+}
